# 1.-Dynamic-pricing-model

./: LICENSE  Makefile  README.md  pyproject.toml
docs/: mkdocs.yml
docs/docs/: index.md
dynamic-pricing-model/: __init__.py
notebooks/: 0. Preprocessing.ipynb
