[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "dynamic-pricing-model"
version = "0.0.1"
description = "A project on Amadari to adapt the princing with respect to the behaviour of the customer"
authors = [
  { name = "David B. AKPOVI" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.11.9"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["dynamic-pricing-model"]
force_sort_within_sections = true
